<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:id="@+id/coursecontainer"
    tools:context=".UI.CourseActivity">

    <EditText
        android:id="@+id/edittext_course_instructorphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="instructor phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edittext_course_instructoremail"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/edittext_course_instructoremail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="INSTRUCTOR PHONE"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_course_EMAIL" />

    <EditText
        android:id="@+id/edittext_course_instructoremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="instructor email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edittext_course_instructorname"
        app:layout_constraintStart_toEndOf="@+id/textview_course_EMAIL"
        app:layout_constraintTop_toBottomOf="@+id/edittext_course_instructorname" />

    <TextView
        android:id="@+id/textview_course_EMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="INSTRUCTOR EMAIL"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_course_INSTRUCTOR" />

    <EditText
        android:id="@+id/edittext_course_instructorname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="course instructor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textview_course_end"
        app:layout_constraintStart_toEndOf="@+id/textview_course_INSTRUCTOR"
        app:layout_constraintTop_toBottomOf="@+id/textview_course_end" />

    <TextView
        android:id="@+id/textview_course_INSTRUCTOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="INSTRUCTOR"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_COURSEENDDATE" />

    <TextView
        android:id="@+id/textview_NOTE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/notes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/list_assessments"
        app:layout_constraintStart_toEndOf="@+id/imageButton" />

    <Spinner
        android:id="@+id/spinner_course_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textview_course_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textview_STATUS"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        android:onClick="deleteCourse"
        app:layout_constraintBottom_toTopOf="@+id/list_assessments"
        app:layout_constraintEnd_toStartOf="@+id/button_save_course" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="56dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToNotes"
        app:layout_constraintBottom_toTopOf="@+id/list_assessments"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_note_24" />

    <TextView
        android:id="@+id/textview_STATUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@+id/textview_COURSEIDNUMBER"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="addAssessment"
        app:layout_constraintBottom_toBottomOf="@+id/list_assessments"
        app:layout_constraintEnd_toEndOf="@+id/list_assessments"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/textview_ASSESSMENTS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/assessments"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/list_assessments"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_course_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_COURSEENDDATE"
        app:layout_constraintTop_toBottomOf="@+id/textview_course_start" />

    <TextView
        android:id="@+id/textview_course_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_course_name_assessment"
        app:layout_constraintStart_toEndOf="@+id/textview_COURSESTARTDATE"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_course_name_assessment" />

    <TextView
        android:id="@+id/textview_COURSEENDDATE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_COURSESTARTDATE" />

    <TextView
        android:id="@+id/textview_COURSESTARTDATE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_course_name_assessment" />

    <EditText
        android:id="@+id/edit_text_course_name_assessment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/course_name"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_COURSENAME" />

    <TextView
        android:id="@+id/textview_COURSENAME"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/course_name_courseactivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_COURSEID" />

    <TextView
        android:id="@+id/textview_COURSEIDNUMBER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/textview_COURSEID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_COURSEID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="ID:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_assessments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/roseWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_assessment_list" />

    <Button
        android:id="@+id/button_save_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="update"
        android:onClick="updateCourse"

        app:layout_constraintBottom_toTopOf="@+id/list_assessments"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>